Fixed flash file uploader button in firefox - this was off kilter, is now back to covering the whole button.

--- a/css/flash_uploader.css
+++ b/css/flash_uploader.css
@@ -4,6 +4,7 @@
 .swfupload {
 	position: absolute;
 	z-index: 1;
+	margin-top: 5px;
 }
 
 /* Style the upload table */
